[workspace]
resolver = "2"
members = ["examples/run_wasm", "examples/demo"]

[workspace.package]
edition = "2021"
version = "0.11.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/loopystudios/bevy_ogle"

[package]
name = "bevy_ogle"
description = "A camera library for 2d vector games"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
authors = ["Spencer C. Imbleau"]
keywords = ["bevy"]
categories = ["game-development", "wasm"]
readme = "README.md"

[lib]


[workspace.dependencies]
bevy = { version = "0.18.0", default-features = false }

[dependencies]
bevy = { workspace = true, default-features = false, features = [
  "bevy_core_pipeline",
  "bevy_window",
] }
dolly = "0.6.0"
mint = "0.5.9"
bevy_egui_0_39 = { package = "bevy_egui", version = "0.39.0", optional = true, default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3.58"

[features]
default = ["bevy_egui_0_39"]
bevy_egui_0_39 = ["dep:bevy_egui_0_39", "internal_bevy_egui"]
internal_bevy_egui = []
