[package]
name = "demo"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { workspace = true, default-features = true }
bevy_ogle = { path = "../.." }
bevy_egui = "0.38.1"
rand = "0.9.1"
