[package]
name = "simple"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { workspace = true, default-features = true }
bevy_ogle = { path = "../.." }
bevy_egui = { version = "0.28.0" }
rand = "0.8.5"
